@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.themoviedb.org"
        name="The MovieDB"
-       version="3.1.0"
+       version="3.2.0"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
-    <import addon="metadata.common.themoviedb.org" version="2.1.5"/>
+    <import addon="metadata.common.themoviedb.org" version="2.1.6"/>
     <import addon="metadata.common.hdtrailers.net" version="1.0.7"/>
     <import addon="metadata.common.imdb.com" version="2.1.9"/>
     <import addon="plugin.video.youtube" version="2.9.1" optional="true"/>
