@@ -6,4 +6,5 @@
     <string id="30002">Preferált nyelv</string>
     <string id="30003">Értékelés letöltése innen</string>
     <string id="30005">Eredeti filmcím megtartása</string>
+    <string id="30006">Preferált korhatár-besorolás innen</string>
 </strings>
