@@ -1,3 +1,8 @@
+[B]3.2.0[/B]
+- fixed: keep Originaltitle
+- fixed: &'s needs double escaping
+- added: option to scrape certification from selected country
+
 [B]3.1.0[/B]
 - updated: factored out title scraping to common library
 
